# Home_work5

./: .gitignore  pyproject.toml  server.py
src/: catalog.html  category.html  contacts.html  main.page.html
